--- a/_projects/2048/2048.md
+++ b/_projects/2048/2048.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 2048
-description: The popular tile game in browser (click to play) <br>(lacks animation ^_^')
+description: (click to play) <br>showcasing this because it looks good aesthetically
 img: /assets/img/projects/2048.gif
 redirect: /projects/2048/2048.html
 #github: https://github.com/pratulyab/2048
